--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 Happy Birthday! 🥳
             </h1>
             <p class="text-xl md:text-2xl text-gray-700 mb-8">
-                Liebe Fiona, bevor du Dein Geschenk öffnest, musst Du einen kleinen Test bestehen...
+                Liebe Fiona, bevor Du Dein Geschenk öffnest, musst Du einen kleinen Test bestehen...
             </p>
             <p class="text-lg text-primary-purple font-semibold mb-8 border-l-4 border-primary-pink pl-4 py-2 bg-pink-50 rounded-lg">
                 Zeig, was Du kannst, um Dir Dein Geschenk zu verdienen!
@@ -455,4 +455,5 @@
 
 </body>
 </html>
+
 
